--- a/app/src/main/res/layout/dialog_water.xml
+++ b/app/src/main/res/layout/dialog_water.xml
@@ -27,7 +27,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="WATERING DURATION:"
+        android:text="WATERING DURATION (MINUTES):"
         android:id="@+id/textViewDarkHours"
         android:paddingTop="16dp"
         android:paddingRight="16dp"
@@ -45,45 +45,53 @@
         android:layout_alignParentStart="true"
         android:gravity="center" />
 
-    <TextView
+    <EditText
         android:layout_width="175dp"
         android:layout_height="wrap_content"
-        android:id="@+id/textViewTime"
+        android:id="@+id/editTextTime"
         android:layout_below="@+id/textViewLightHours"
         android:layout_centerHorizontal="true"
         android:text="3"
         android:gravity="center"
         android:textSize="25dp"
         android:typeface="serif"
-        android:padding="5dp" />
+        android:padding="5dp"
+        android:numeric="integer"
+        android:inputType="number"
+        android:selectAllOnFocus="true"
+        android:cursorVisible="false"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="+"
         android:id="@+id/buttonTimeIncrease"
-        android:layout_alignTop="@+id/textViewTime"
-        android:layout_toRightOf="@+id/textViewTime" />
+        android:layout_alignTop="@+id/editTextTime"
+        android:layout_toRightOf="@+id/editTextTime" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="-"
         android:id="@+id/buttonTimeDecrease"
-        android:layout_alignTop="@+id/textViewTime"
-        android:layout_toLeftOf="@+id/textViewTime" />
+        android:layout_alignTop="@+id/editTextTime"
+        android:layout_toLeftOf="@+id/editTextTime" />
 
-    <TextView
+    <EditText
         android:layout_width="175dp"
         android:layout_height="wrap_content"
-        android:id="@+id/textViewDuration"
+        android:id="@+id/editTextDuration"
         android:text="3"
         android:gravity="center"
         android:textSize="25dp"
         android:typeface="serif"
         android:layout_below="@+id/textViewDarkHours"
         android:layout_centerHorizontal="true"
-        android:padding="5dp" />
+        android:padding="5dp"
+        android:numeric="integer"
+        android:inputType="number"
+        android:selectAllOnFocus="true"
+        android:cursorVisible="false" />
 
     <Button
         android:layout_width="wrap_content"
@@ -91,7 +99,7 @@
         android:text="+"
         android:id="@+id/buttonDurationIncrease"
         android:layout_below="@+id/textViewDarkHours"
-        android:layout_toRightOf="@+id/textViewDuration" />
+        android:layout_toRightOf="@+id/editTextDuration" />
 
     <Button
         android:layout_width="wrap_content"
@@ -99,7 +107,7 @@
         android:text="-"
         android:id="@+id/buttonDurationDecrease"
         android:layout_below="@+id/textViewDarkHours"
-        android:layout_toLeftOf="@+id/textViewDuration" />
+        android:layout_toLeftOf="@+id/editTextDuration" />
 
     <TextView
         android:layout_width="match_parent"
@@ -110,7 +118,7 @@
         android:paddingLeft="16dp"
         android:paddingBottom="16dp"
         android:gravity="center_horizontal"
-        android:layout_below="@+id/textViewTime"
+        android:layout_below="@+id/editTextTime"
         android:layout_alignParentStart="true" />
 
 </RelativeLayout>
